Fixed an issue where the drag-hp event may get cancelled on iOS devices due to accidental scrolling (#534)

--- a/src/app/ui/figures/character/character.scss
+++ b/src/app/ui/figures/character/character.scss
@@ -397,6 +397,7 @@
       display: flex;
       align-items: center;
       z-index: 2;
+      touch-action: none;
     }
 
     .health {
