--- a/src/app/ui/figures/standee/standee.scss
+++ b/src/app/ui/figures/standee/standee.scss
@@ -1,6 +1,6 @@
 .entity-border {
   position: relative;
-
+  touch-action: none;
   &:hover {
     z-index: 999;
   }
